<?xml version="1.0"?>
<package>
  <name>diffbot_control</name>
  <version>0.0.0</version>
  <description>The diffbot_control package</description>

  <maintainer email="wsacul@gmail.com">Lucas Walter</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/lucasw/simple_sim_ros</url>
  <author email="wsacul@gmail.com">Lucas Walter</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ros_control_boilerplate</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_control_boilerplate</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
